updated css and added page 2

--- a/page2.html
+++ b/page2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <h1 class="new-color" id="the-one">CSS Tutorial</h1>
+    <h1 class="new-color" id="the-one">Page 2</h1>
     <p class="new-color">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
       reiciendis reprehenderit voluptatum ut aspernatur maiores cupiditate
@@ -22,13 +22,5 @@
       <p>Border Box Model</p>
     </section>
     <a href="page2.html">Page 2</a>
-    <img
-      src="img/cherry-blossom.jpg"
-      alt="Cherry blossoms blooming on a tree."
-    />
-    <img
-      src="img/cherry-blossom.jpg"
-      alt="Cherry blossoms blooming on a tree."
-    />
   </body>
 </html>
